# blocky

./: .bumpversion.cfg  .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  HISTORY.rst  Makefile  README.rst  autotest.watchr  blocky
cmake/: FindChipmunk.cmake
config/: config.cfg  config.xml
include/: Block.h  Config.h  Field.h  Game.h  GameState.h  LifeCycle.h  ServiceLocator.h  TetrisGame.h  actor.h  actor_factory.h  blocky_config.h  blocky_macros.h  blocky_main.h  bulky_logging.h  command.h  component.h  component.hpp  component_factories.h  constants.h  game.h  game_state.h  logging.h  message_queue.h  resource.h  screen.h  service_locator.h  timer.h  user_events.h  world.h
src/: Config.cpp  Field.cpp  Game.cpp  GameState.cpp  ServiceLocator.cpp  actor.cpp  actor_factory.cpp  blocky_main.cpp  bulky_logging.cpp  component_factories.cpp  game.cpp  game_state.cpp  logging.cpp  main.cpp  main.cpp~  message_queue.cpp  screen.cpp  service_locator.cpp  timer.cpp  user_events.cpp  world.cpp
tests/: test_base.cpp  test_blocky.cpp  test_field.cpp
